Fixed alerts on mobile
And beautified

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,9 @@ h6,
     font-weight: 300;
     line-height: 1.1;
 }
-select, select.form-control {
+
+select,
+select.form-control {
     background-color: #ffffff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-position: right 10px center;
@@ -37,7 +39,9 @@ select, select.form-control {
     padding-left: 15px;
     padding-right: 15px
 }
-select:focus, select.form-control:focus {
+
+select:focus,
+select.form-control:focus {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -52,6 +56,7 @@ select:focus, select.form-control:focus {
     line-height: 1.8em;
     margin-bottom: 30px
 }
+
 a.slick-prev i,
 a.slick-next i {
     -webkit-transition-duration: 0.4s;
@@ -92,6 +97,7 @@ span.skill-item {
     right: 30px;
     z-index: 1000;
     transition: all 0.5s ease;
+    margin-left: 30px;
 }
 
 .skill-header h3 {
@@ -167,7 +173,8 @@ span.skill-item {
     transition: all 0.5s ease;
 }
 
-.book:hover .btn-book, .book:focus .btn-book {
+.book:hover .btn-book,
+.book:focus .btn-book {
     display: block;
     animation: fadein 0.5s;
 }
@@ -222,19 +229,22 @@ span.skill-item {
     position: absolute;
     opacity: 0.3;
 }
+
 .skill-card-nav .skill-card-nav-item i {
-    color:#5594db;
+    color: #5594db;
     margin-top: 11px;
 }
+
 .skill-card-nav .panel-card-completed i {
-    color:#4caf50;
+    color: #4caf50;
 }
 
 .skill-card-nav .selected .skill-card-nav-item {
     opacity: 1.0;
     box-shadow: 0 0 4px #5594db;
-/*    border: 1px solid rgba(81, 203, 238, 1);
-*/}
+    /*    border: 1px solid rgba(81, 203, 238, 1);
+*/
+}
 
 .skill-img {
     height: 30px;
@@ -287,7 +297,7 @@ span.skill-item {
 
 .skill-plan {
     background-color: #333;
-    margin-top:-5px;
+    margin-top: -5px;
 }
 
 .skill-section {
@@ -395,10 +405,12 @@ a.dashboard-kpi h1 {
     -webkit-box-shadow: none !important;
     padding-left: 15px !important;
 }
+
 .input-group-lg.panel button {
     border-top-right-radius: 4px !important;
-    border-bottom-right-radius: 4px !important;    
+    border-bottom-right-radius: 4px !important;
 }
+
 input.form-control.home-search {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -443,13 +455,15 @@ h1,
 .nav-pills > li > a {
     border-radius: 0;
 }
-.panel .nav-pills li:first-child a, .panel .nav-pills li:first-child .active a  {
+
+.panel .nav-pills li:first-child a,
+.panel .nav-pills li:first-child .active a {
     border-top-left-radius: 2px !important;
     border-bottom-left-radius: 2px !important;
 }
 
-.panel .nav-pills li:last-child a, .panel .nav-pills li:last-child .active a
-{
+.panel .nav-pills li:last-child a,
+.panel .nav-pills li:last-child .active a {
     border-top-right-radius: 2px !important;
     border-bottom-right-radius: 2px !important;
 }
@@ -704,20 +718,23 @@ span.input-group-btn button.btn {
     border-left-color: #4caf50 !important;
 }
 
-
 .panel .nav-pills li a:hover {
     background: #efefef;
-    color:#333;
+    color: #333;
     -webkit-box-shadow: none;
-     box-shadow: none; 
+    box-shadow: none;
 }
-.panel .nav-pills li.active h6, .panel .nav-pills li a:focus h6  {
+
+.panel .nav-pills li.active h6,
+.panel .nav-pills li a:focus h6 {
     color: white;
 }
-.panel .nav-pills li.active a, .panel .nav-pills li a:focus {
+
+.panel .nav-pills li.active a,
+.panel .nav-pills li a:focus {
     background: #F9953D;
-    -webkit-box-shadow: none; */
-     box-shadow: none;
+    -webkit-box-shadow: none;
+    */ box-shadow: none;
 }
 
 .panel-icon {
@@ -860,7 +877,7 @@ span.input-group-btn button.btn {
 }
 
 .jumbotron.heading {
-    background:none;
+    background: none;
     padding-bottom: 0px;
     padding-top: 0px;
     margin-bottom: 0px;
@@ -1874,15 +1891,28 @@ blockquote p {
 
 
 /* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
+    #alertbox {
+        top: 10px;
+        right: 10px;
+        margin-left: 10px;
+    }
+}
+
+/* Small Devices, Phones */
 
 @media only screen and (min-width: 480px) {
     .book-wrapper.col-xs-6 {
         padding-bottom: 60%;
     }
+    #alertbox {
+        top: 10px;
+        right: 10px;
+    }
 }
 
 
-/* Small Devices, Tablets */
+/* Medium Devices, Tablets */
 
 @media only screen and (min-width: 768px) {
     .book-wrapper.col-sm-3 {
@@ -1891,12 +1921,12 @@ blockquote p {
 }
 
 
-/* Medium Devices, Desktops */
+/* large  Devices, Desktops */
 
 @media only screen and (min-width: 992px) {}
 
 
-/* Large Devices, Wide Screens */
+/* Xtra Large Devices, Wide Screens */
 
 @media only screen and (min-width: 1200px) {
     .book-wrapper.col-lg-2 {
